<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp">

        <LinearLayout
            android:id="@+id/mainHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25sp"
            android:layout_marginTop="40sp"
            android:background="@drawable/rounded1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30sp"
                android:src="@drawable/hello2" />

            <TextView
                style="@style/Main"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="8sp"
                android:gravity="center_horizontal"
                android:text="@string/hello"
                android:textSize="25sp"

                />

        </LinearLayout>

        <TextView
            android:id="@+id/mainButton1"
            style="@style/mainButtons"
            android:layout_below="@id/mainHello"
            android:text="@string/musicPlayerMain" />


        <TextView
            android:id="@+id/mainButton2"
            style="@style/mainButtons"
            android:layout_below="@id/mainButton1"
            android:text="@string/songsList" />

        <TextView
            android:id="@+id/mainButton3"
            style="@style/mainButtons"
            android:layout_below="@id/mainButton2"
            android:text="@string/tracksong" />


    </RelativeLayout>
</RelativeLayout>
